syntax = "proto3";

package user;

option go_package = "simple-mm/";

service MatchmakingService {
  rpc AddMatchmaking(MatchmakingRequest) returns (MatchmakingResponse) {}
  rpc AddFakeUser(MatchmakingRequest) returns (MatchmakingResponse) {}
}

message MatchmakingRequest {
  string username = 1;
  int64 mmr = 2;
}

message MatchmakingResponse {
  repeated string usernames = 1;
  repeated int64 mmr = 2;
}